--- a/SharpRemote/SharpRemote/MainPage.xaml
+++ b/SharpRemote/SharpRemote/MainPage.xaml
@@ -13,95 +13,127 @@
     </ContentPage.BindingContext>
 
     <ScrollView>
-        <Grid
-            ColumnSpacing="5"
-            RowSpacing="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Button
+        <Grid>
+            <Grid
                 Grid.Row="0"
-                Grid.Column="0"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="01"
-                Text="1" />
-            <Button
-                Grid.Row="0"
-                Grid.Column="1"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="02"
-                Text="2" />
-            <Button
-                Grid.Row="0"
-                Grid.Column="2"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="03"
-                Text="3" />
-            <Button
+                ColumnSpacing="5"
+                RowSpacing="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="01"
+                    Text="1" />
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="02"
+                    Text="2" />
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="03"
+                    Text="3" />
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="04"
+                    Text="4" />
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="05"
+                    Text="5" />
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="06"
+                    Text="6" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="07"
+                    Text="7" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="08"
+                    Text="8" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="09"
+                    Text="9" />
+                <Button
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="10"
+                    Text="." />
+                <Button
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="00"
+                    Text="0" />
+                <Button
+                    Grid.Row="3"
+                    Grid.Column="2"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="11"
+                    Text="ENT" />
+            </Grid>
+            <Grid
                 Grid.Row="1"
-                Grid.Column="0"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="04"
-                Text="4" />
-            <Button
-                Grid.Row="1"
-                Grid.Column="1"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="05"
-                Text="5" />
-            <Button
-                Grid.Row="1"
-                Grid.Column="2"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="06"
-                Text="6" />
-            <Button
-                Grid.Row="2"
-                Grid.Column="0"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="07"
-                Text="7" />
-            <Button
-                Grid.Row="2"
-                Grid.Column="1"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="08"
-                Text="8" />
-            <Button
-                Grid.Row="2"
-                Grid.Column="2"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="09"
-                Text="9" />
-            <Button
-                Grid.Row="3"
-                Grid.Column="0"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="10"
-                Text="." />
-            <Button
-                Grid.Row="3"
-                Grid.Column="1"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="00"
-                Text="0" />
-            <Button
-                Grid.Row="3"
-                Grid.Column="2"
-                Command="{Binding ButtonPressedCommand}"
-                CommandParameter="11"
-                Text="ENT" />
+                ColumnSpacing="5"
+                RowSpacing="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button
+                    Grid.Column="0"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="27"
+                    Text="CC" />
+                <Button
+                    Grid.Column="1"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="28"
+                    Text="AV MODE" />
+                <Button
+                    Grid.Column="2"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="29"
+                    Text="VIEW MODE" />
+                <Button
+                    Grid.Column="3"
+                    Command="{Binding ButtonPressedCommand}"
+                    CommandParameter="30"
+                    Text="FLASHBACK" />
+
+            </Grid>
         </Grid>
     </ScrollView>
-
-
-
 </ContentPage>
