Minor cleanup of views and shorten vibrate time when tapping on refresh button

--- a/SharpRemote/SharpRemote/Views/KeypadPage.xaml
+++ b/SharpRemote/SharpRemote/Views/KeypadPage.xaml
@@ -3,18 +3,15 @@
     x:Class="SharpRemote.Views.KeypadPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:viewModels="clr-namespace:SharpRemote.ViewModels"
     CloseWhenBackgroundIsClicked="True"
-    IsAnimationEnabled="False"
-    mc:Ignorable="d">
+    IsAnimationEnabled="False">
 
     <ContentPage.BindingContext>
         <viewModels:BaseViewModel />
     </ContentPage.BindingContext>
-    
+
     <Frame
         BackgroundColor="White"
         BorderColor="Black"
